--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -910,6 +910,9 @@
      .new_wizardNote_for6{
       right: 53px ! important;
      }
+     .new_wizardNotefor4{
+      right: -95px ! important;
+     }
   }    
 
 
