--- a/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
@@ -435,9 +435,9 @@
 }
 
 @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
-  and (orientation: landscape) 
+  and (device-width: 1024px) 
+  and (device-height: 1366px) 
+  and (orientation: portrait) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
   .newcard_landscape{
     width: 220px ! important;
@@ -448,8 +448,8 @@
   }
 }  
 @media only screen 
-  and (min-width: 1366px) 
-  and (max-height: 1024px) 
+  and (device-width: 1366px) 
+  and (device-height: 1024px) 
   and (orientation: landscape) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
   .newcard_landscape{
@@ -459,14 +459,17 @@
 
 } 
 @media only screen 
-  and (min-width: 1024px) 
-  and (max-height: 1366px) 
+  and (device-width: 1024px) 
+  and (device-height: 1366px) 
   and (orientation: portrait) 
-  and (-webkit-min-device-pixel-ratio: 1.5) {
+   {
   .newcard_landscape{
-    width: 250px ! important;
+    width: 220px ! important;
 
   }
+  .downimgtext{
+    left:15em ! important;
+  } 
 
 }  
 @media only screen 
