--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -864,6 +864,11 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
     width: 265px ! important;
   }
  } 
+  @media only screen and (device-width : 411px) and (device-height : 823px) { 
+  .new_BT3_innerBlock {
+    width: 413px ! important;
+  }
+ } 
  
 @media screen and (max-width:480px){
     .new_round-tabfor4{
@@ -956,7 +961,8 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
         font-size: 10px ! important;
       }
      
-}  
+} 
+
 @media only screen (max-width:1024px) and(orientation: portrait) {
    .price.price-three{
       margin-left: 165px ! important;
@@ -1141,6 +1147,11 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
     .BT3_innerBlockImage{
       height: 370px ! important;
     }
+    .blck{
+          padding: 32px 25px 56px;
+          margin-top: 58px;
+          margin: 20px;
+          }
   }   
    @media only screen and (device-width : 480px) and (device-height : 854px) { 
     .serflip-card {
@@ -1335,11 +1346,14 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
 
     } 
     #consultdown_img3{
-      top:96em ! important;
+      top:92em ! important;
+    }
+    .BT3_innerBlockImage{
+      height: 450px ! important;
     }
 
     #consultdown_data3{
-      top:104em ! important;
+      top:101em ! important;
     }   
     .resfooterend{
       height: 65px ! important;
