--- a/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
+++ b/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
@@ -73,7 +73,7 @@
 	}
 	.img1 img{
 		width:100%;
-		 height: auto ! important;
+		 height: 320px ! important;
         /*object-fit: contain;*/
 	 }
 
@@ -87,7 +87,7 @@
 	}
 	.img1 img{
 		width: 100%;
-		/*height: 375px ! important;*/
+		height: 300px ! important;
         /*object-fit: contain;*/
 	 }
 
