--- a/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
@@ -489,6 +489,12 @@
     margin-left: 20px ! important;
   } 
 }
+@media only screen and (device-width : 393px) and (device-height : 851px) {
+
+  .serflip-card{
+    width:260px ! important;
+  } 
+}
 @media only screen and (device-width : 411px) and (device-height : 823px) {
 
    .serflip-cardservices img{
