--- a/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
+++ b/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
@@ -25,6 +25,13 @@
 	}
 
 }
+@media only screen and (device-width : 320px)and (device-height : 480px){
+	.img1 img{
+		height: 300px ! important;
+
+	}
+
+}
 @media only screen and (device-width : 390px)and (device-height : 844px){
 	.img1 img{
 		height: 300px ! important;
